cleaned up code in js file, added sections, final commit

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             width: 75%;
             height: auto;
         }
+
+        .card {
+            margin: 50px;
+        }
     </style>
 </head>
 
