--- a/index.html
+++ b/index.html
@@ -8,13 +8,22 @@
     <title>Password Generator</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
 
     <style>
+        body {
+            font-family: 'Press Start 2P', cursive;
+            background-color: grey;
+        }
+
         textarea {
             display: block;
             margin: 10px auto;
             width: 75%;
             height: auto;
+            background-color: black;
+            color: #75f044;
+            height: 150px;
         }
 
         .card {
